# Vehicle-Insurance-Prediction-Mlops-Project

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  demo.py  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: CI-CD.yaml
Config/: Schema.yaml
ansible-automation/: Clean-Ec2-Space.yaml  Restart-runner.yaml  deploy_EC2.yaml
assets/: CI-CD-Architecture.mmd  ML-Pipeline-Architecture.mmd
infrastructure/backend-setup/: .terraform.lock.hcl  dynamodb-locks.tf  providers.tf  s3-backend.tf  tfplan  variables.tf
infrastructure/infra-live/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf
infrastructure/live-Infra/: s3.tf  tfplan  variables.tf
infrastructure/modules/ec2/: main.tf  outputs.tf  variables.tf
infrastructure/modules/ecr/: ecr.tf  outputs.tf  variables.tf
infrastructure/modules/iam_role/: iam_role.tf  (+2 more)
src/Cloud_Storage/: AWS_Storage.py
src/Components/: 1_Data_Ingestion.py  2_Data_Validation.py  3_Data_Transformation.py  4_Data_Trainer.py  S1_Data_Ingestion.py  S2_Data_Validation.py  S3_Data_Transformation.py  S4_Model_Trainer.py  S5_Data_Evaluation.py  S6_Model_Pusher.py
src/Configuration/: AWS_Connection.py  Mongo_DB_Connection.py
src/Constants/: __init__.py  global_logging.py
src/Data_Access/: Vehicle_Insurance_Data.py
src/Entity/: Artifact_Entity.py  Config_Entity.py  Estimator.py  S3_Estimator.py
src/Exception/: __init__.py
src/Logger/: __init__.py  from_root.py
src/Pipeline/: Prediction_Pipeline.py  Training_Pipeline.py
src/Utils/: Main_Utils.py
templates/: vehicledata.html
(+6 files in other folders)
